// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Currency exchange component renders exchange component for from currency 1`] = `
.glamor-11 {
  width: 600px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
  padding: 20px 0px;
}

.glamor-5 {
  width: 50%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.glamor-1 {
  height: 43px;
  width: 80px;
  outline: none;
}

.glamor-3 {
  font-size: 12px;
  color: #b1b1b1;
  font-family: Arial;
}

.glamor-3 span {
  font-size: 10px;
}

.glamor-9 {
  width: 50%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.glamor-7 {
  outline: none;
  border: none;
  padding: 10px 0px;
  font-size: 20px;
  text-align: right;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
}

.glamor-7 ::-moz-selection {
  background: transparent;
}

.glamor-7 ::selection {
  background: transparent;
}

<div
  className="glamor-10 glamor-11"
  type="from"
>
  <div
    className="glamor-4 glamor-5"
  >
    <select
      className="glamor-0 glamor-1"
      onChange={[Function]}
      value={1}
    >
      <option
        value={0}
      >
        USD
      </option>
      <option
        value={1}
      >
        PLN
      </option>
    </select>
    <p
      className="glamor-2 glamor-3"
    >
      Balance: 
      <span>
        $
      </span>
      1000
    </p>
  </div>
  <div
    className="glamor-4 glamor-9"
  >
    <input
      className="glamor-6 glamor-7"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="0"
      type="text"
      value="+1234"
    />
  </div>
</div>
`;

exports[`Currency exchange component renders exchange component for to currency 1`] = `
.glamor-5 {
  width: 50%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.glamor-1 {
  height: 43px;
  width: 80px;
  outline: none;
}

.glamor-3 {
  font-size: 12px;
  color: #b1b1b1;
  font-family: Arial;
}

.glamor-3 span {
  font-size: 10px;
}

.glamor-11 {
  width: 50%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.glamor-7 {
  outline: none;
  border: none;
  padding: 10px 0px;
  font-size: 20px;
  text-align: right;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
}

.glamor-7 ::-moz-selection {
  background: transparent;
}

.glamor-7 ::selection {
  background: transparent;
}

.glamor-13 {
  width: 600px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  padding: 20px 0px;
}

.glamor-9 {
  font-size: 12px;
  color: #b1b1b1;
  font-family: Arial;
}

.glamor-9 span {
  font-size: 10px;
}

.glamor-9 i:hover {
  cursor: pointer;
}

<div
  className="glamor-12 glamor-13"
  type="to"
>
  <div
    className="glamor-4 glamor-5"
  >
    <select
      className="glamor-0 glamor-1"
      onChange={[Function]}
      value={1}
    >
      <option
        value={0}
      >
        USD
      </option>
      <option
        value={1}
      >
        PLN
      </option>
    </select>
    <p
      className="glamor-2 glamor-3"
    >
      Balance: 
      <span>
        $
      </span>
      1000
    </p>
  </div>
  <div
    className="glamor-4 glamor-11"
  >
    <input
      className="glamor-6 glamor-7"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="0"
      type="text"
      value="+1234"
    />
    <p
      className="glamor-8 glamor-9"
    >
      Inc. fee: 
      <span>
        zł
      </span>
      50
       
      <i
        aria-hidden="true"
        className="fa fa-info-circle"
        onClick={[Function]}
      />
    </p>
  </div>
</div>
`;
